fix hover is ready & is visible

--- a/assets/_sass/_grid.scss
+++ b/assets/_sass/_grid.scss
@@ -98,6 +98,10 @@
             opacity: 0;
             transition: opacity 1.2s ease;
 
+            &.is-ready {
+                opacity: 0.3;
+            }
+
             &.is-visible {
                 opacity: 1;
             }
